--- a/src/style.css
+++ b/src/style.css
@@ -16,10 +16,10 @@ body {
 }
 #big-card {
     margin: 20px;
-    border-radius: 30px;
+    border-radius: 5px;
     background-color: white;
-    width: 90%;
-    height: 90%;
+    width: 80%;
+    height: 80%;
     box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
 }
 
@@ -43,7 +43,7 @@ body {
 }
 
 #logo {
-    width: 5em;
+    width: 7em;
     height: auto;
 }
 
@@ -61,4 +61,125 @@ body {
     display: flex;
     flex-direction: column;
     gap: 30px;
+}
+
+#content{
+    display: flex;
+    flex-direction: column;
+}
+
+.dialog-list {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+}
+
+.dialog {
+    border-radius: 20px;
+    border: 0px;
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+    align-self: center;
+    justify-content: center;
+    background-color: #322c38;
+    color: white;
+
+}
+
+#big-card {
+    padding: 20px;
+    overflow-y: auto;
+    height: 700px;
+}
+
+.add {
+    width: 150px;
+    font-family: inherit;
+    font-size: 2em;
+    margin: 10px;
+    padding: 10px;
+    border-radius: 20px;
+    border: 0;
+    background-color: #e83c38;
+}
+
+.add:hover {
+    opacity: 50%;
+    color: white;
+}
+.text-field {
+    display: flex;
+    align-items: center;
+    gap: 20px;
+
+}
+#task, #description {
+    width: 100%;
+    height: 1.3em;
+    border-radius: 10px;
+    font-size: inherit;
+    font-family: inherit;
+}
+
+#confirm {
+    font-family: inherit;
+    font-size: inherit;
+    background-color:#e83c38;
+    border: 0;
+    border-radius: 30px;
+    padding: 10px;
+}
+
+#cancel {
+    font-size: inherit;
+    font-family: inherit;
+    background-color: #e83c38;
+    border: 0;
+    border-radius: 30px;
+    padding: 10px;
+}
+
+#big-card::-webkit-scrollbar {
+    width: 12px;
+}
+
+#big-card::-webkit-scrollbar-track {
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3); 
+    border-radius: 10px;
+}
+
+#big-card::-webkit-scrollbar-thumb {
+    border-radius: 10px;
+    -webkit-box-shadow: inset 12px 0 6px grey; 
+}
+
+.area {
+    list-style: none;
+    display: flex;
+    align-items: flex-start;
+    gap: 30px;
+    height: 100px;
+}
+
+.area textarea {
+    width: 50px;
+    height: 300px;
+}
+.radio {
+    list-style: none;
+}
+
+.buttons {
+    display: flex;
+    gap: 20px;
+}
+
+.buttons button {
+    padding: 10px;
+    border: 0;
+    border-radius: 15px;
+    background-color: #e83c38;
+}
+
+button.task-done {
+    background-color: green;
 }
