--- a/src/style.css
+++ b/src/style.css
@@ -1,7 +1,7 @@
 body {
     display: grid;
     grid-template-columns: 1.5fr 8fr;
-    grid-template-rows: 1fr 8fr;
+    grid-template-rows: 1fr 1.5fr 8fr;
     padding: 0;
     margin: 0;
     height: 100vh;
@@ -24,7 +24,7 @@ body {
 }
 
 #header {
-    grid-column: 2;
+    grid-column: 1/3;
     grid-row: 1;
     background-color: #e83c38;
     display: flex;
@@ -33,10 +33,10 @@ body {
 }
 #side-bar {
     display: flex;
-    flex-direction: column;
     align-items: center;
-    grid-row: 1/3;
-    grid-column: 1;
+    justify-content: space-around;
+    grid-row: 2;
+    grid-column: 1/3;
     background-color: #322c38;
     padding-top: 60px;
     gap: 100px;
@@ -59,13 +59,15 @@ body {
 #nav {
     list-style: none;
     display: flex;
-    flex-direction: column;
+    flex-wrap: wrap;
     gap: 30px;
 }
 
 #content{
     display: flex;
     flex-direction: column;
+    grid-row: 3;
+    grid-column: 1/3;
 }
 
 .dialog-list {
