--- a/src/style.css
+++ b/src/style.css
@@ -37,14 +37,19 @@ body {
     justify-content: space-around;
     grid-row: 2;
     grid-column: 1/3;
-    background-color: #322c38;
+    background-color: black;
     padding-top: 60px;
-    gap: 100px;
+   
 }
 
 #logo {
     width: 7em;
     height: auto;
+    margin-bottom: 20px;
+}
+
+textarea {
+    height: 100px;;
 }
 
 #nav button {
@@ -82,7 +87,7 @@ body {
     box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
     align-self: center;
     justify-content: center;
-    background-color: #322c38;
+    background-color: black;
     color: white;
 
 }
@@ -116,7 +121,7 @@ body {
 }
 #task, #description {
     width: 100%;
-    height: 1.3em;
+    height: auto;
     border-radius: 10px;
     font-size: inherit;
     font-family: inherit;
